--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ disqus_shortname: myshortname
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: 000000 #80B3FF 18bc9c
-  primary-rgb: 000000 #"128,179,255"  "24,288,156"
+  primary-rgb: "0,0,0"  #"128,179,255"  "24,288,156"
   secondary: 000000 #FD6E8A 2c3e50
   secondary-dark: 000000 #A2122F 233140
 
